# Microscope-Calibration

./: .pre-commit-config.yaml  README.md  pyproject.toml  test_requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: .gitignore  generate.ipynb  stem_overfocus.ipynb
packaging/: .gitignore  build.sh  overfocus.def  requirements.in  requirements.txt  run.sh  update-requirements.sh
prototypes/: AuEntryWithCollCode163723.cif  BiFeO3EntryWithCollCode29921.cif  EntryWithCollCode52700.cif  clcalib.ipynb  descan_compensation.ipynb  guistuff.ipynb  reproducer.ipynb  testbed.ipynb
prototypes/sympy/: sympy_test.ipynb
src/microscope_calibration/: ui.py
src/microscope_calibration/common/: model.py  stem_overfocus.py
src/microscope_calibration/udf/: stem_overfocus.py
src/microscope_calibration/util/: diffraction.py  optimize.py  stem_overfocus_sim.py
tests/: conftest.py  test_calibration.py  test_model.py  test_optimize.py  test_overfocus.py  test_overfocus_udf.py  test_sim.py
