[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "microscope-calibration"
description = "Tools to calibrate a microscope"
license = {file = "LICENSE"}
keywords = ["microscopy", "LiberTEM", "TEM", "STEM"]
requires-python = ">=3.9"
dynamic = ["version", "readme"]
dependencies = [
    "numpy",
    "libertem",
    "typing-extensions",
    "temgymbasic@git+https://github.com/TemGym/TemGym@c7a851ce2d6719acc47d36d31d91df27b1e9590b",
    # Minimum constraints of numba for all Python versions we support
    # See https://numba.readthedocs.io/en/stable/release-notes-overview.html
    "numba>=0.53;python_version < '3.10'",
    "numba>=0.55;python_version < '3.11'",
    "numba>=0.57;python_version < '3.12'",
    "numba>=0.59;python_version < '3.13'",
    # for any future Python release, constrain numba to a recent version,
    # otherwise, version resolution might try to install an ancient version
    # that isn't constrained properly:
    "numba>=0.61;python_version >= '3.13'",  
    "scikit-image",
    "scipy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
]
authors = [
    {name="Dieter Weber", email="d.weber@fz-juelich.de"},
]

[project.urls]
repository = "https://github.com/LiberTEM/Microscope-Calibration"

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
examples = ["ipywidgets", "libertem[bqplot]", "jupyter-ui-poll"]

[tool.setuptools.dynamic]
version = {attr = "microscope_calibration.__version__"}
readme = {file = ["README.md"], content-type="text/markdown"}
